--- a/vars/main.yml
+++ b/vars/main.yml
@@ -185,7 +185,9 @@ systemd_lib_directory: /lib/systemd/system
 
 mariadb_build_packages: []
 
-mariadb_python_packages: []
+mariadb_python_packages:
+  - name: mysqlclient
+    version: 2.0.3
 
 # package name
 mariadb_server: "mariadb-server"
@@ -196,140 +198,5 @@ mariadb_service: mariadb
 mariadb_socket: /run/mysqld/mysqld.sock
 
 mariadb_installed: false
-
-#mariadb_log_directory: "/var/log/mysql"
-#mariadb_slow_query_log_file: "{{ mariadb_log_directory }}/mysql-slow.log"
-#mariadb_log_error: "{{ mariadb_log_directory }}/mysql.error"
-
-
-# # ---------------------------------------------------
-#
-# _systemd_lib_directory:
-#   default: /lib/systemd/system
-#   debian: /lib/systemd/system
-#   redhat: /usr/lib/systemd/system
-#
-# _mariadb_server:
-#   default: mariadb-server
-#   archlinux: mariadb
-#
-# _mariadb_packages:
-#   default:
-#     - libmariadb-dev
-#     - mariadb-server
-#     - python-mysqldb
-#     - python3-mysqldb
-#   archlinux:
-#     - mariadb
-#     - mariadb-libs
-#     - mariadb-clients
-#     - python-mysqlclient
-#   redhat:
-#     - MariaDB-client
-#     - MariaDB-devel
-#     - MariaDB-server
-#     - MariaDB-shared
-#     - gcc
-#     - make
-#     - python3-setuptools
-#     - python36-devel
-#     - redhat-rpm-config
-#   redhat-8:
-#     - gcc
-#     - make
-#     - mariadb
-#     - mariadb-common
-#     - mariadb-server
-#     - mariadb-devel
-#     - python3-devel
-#     - python3-setuptools
-#     - redhat-rpm-config
-#   redhat-8-external:
-#     - MariaDB-client
-#     - MariaDB-devel
-#     - MariaDB-server
-#     - MariaDB-shared
-#     - gcc
-#     - make
-#     - python3-devel
-#     - python3-setuptools
-#     - redhat-rpm-config
-#   debian:
-#     - libmariadb-dev
-#     - mariadb-server
-#     - python3-mysqldb
-#     - python3-pip
-#     - python3-setuptools
-#   ubuntu:
-#     - libmariadb-dev
-#     - mariadb-server
-#     - python3-mysqldb
-#     - python3-pip
-#     - python3-setuptools
-#
-# _mariadb_python_packages:
-#   default:
-#     - name: mysqlclient
-#   debian:
-#     - name: mysqlclient
-#   redhat:
-#     - name: mysqlclient
-#   archlinux: []
-#
-# _mariadb_service:
-#   default: mariadb
-#   archlinux: mariadb
-#   redhat: mariadb
-#   debian: mariadb
-#
-#
-# _mariadb_socket:
-#   default: /run/mysqld/mysqld.sock
-#   archlinux: /run/mysqld/mysqld.sock
-#   redhat: /var/lib/mysql/mysql.sock
-#   centos: /var/lib/mysql/mysql.sock
-#   debian: /run/mysqld/mysqld.sock
-#
-# systemd_lib_directory: "{{
-#           _systemd_lib_directory[ansible_os_family | lower] |
-#   default(_systemd_lib_directory['default']) }}"
-#
-# mariadb_log_directory: /var/log/mysql
-# mariadb_slow_query_log_file: "{{ mariadb_log_directory }}/mysql-slow.log"
-# mariadb_log_error: "{{ mariadb_log_directory }}/mysql.error"
-#
-# mariadb_pid_file: /run/mysqld/mysqld.pid
-#
-# mariadb_config_dir: /etc/mysql
-# mariadb_config_include_dir: "{{ mariadb_config_dir }}/conf.d"
-#
-# mariadb_server: "{{
-#           _mariadb_server[ansible_os_family | lower] |
-#   default(_mariadb_server[ansible_distribution | lower ] |
-#   default(_mariadb_server['default'])) }}"
-#
-# mariadb_packages: "{{
-#           _mariadb_packages[ansible_os_family | lower ~ '-' ~ ansible_distribution_major_version] |
-#   default(_mariadb_packages[ansible_os_family | lower] |
-#   default(_mariadb_packages[ansible_distribution | lower~ '-' ~ ansible_distribution_major_version ~ '-external' if mariadb_use_external_repo else '' ] |
-#   default(_mariadb_packages[ansible_distribution | lower~ '-' ~ ansible_distribution_major_version] |
-#   default(_mariadb_packages[ansible_distribution | lower] |
-#   default(_mariadb_packages['default']))))) }}"
-#
-# mariadb_python_packages: "{{
-#           _mariadb_python_packages[ansible_os_family | lower~ '-' ~ ansible_distribution_major_version] |
-#   default(_mariadb_python_packages[ansible_os_family | lower] |
-#   default(_mariadb_python_packages[ansible_distribution | lower~ '-' ~ ansible_distribution_major_version] |
-#   default(_mariadb_python_packages['default']))) }}"
-#
-# mariadb_service: "{{
-#           _mariadb_service[ansible_os_family | lower] |
-#   default(_mariadb_service[ansible_distribution | lower ] |
-#   default(_mariadb_service['default'])) }}"
-#
-# mariadb_socket: "{{
-#           _mariadb_socket[ansible_os_family | lower ] |
-#   default(_mariadb_socket[ansible_distribution | lower] |
-#   default(_mariadb_socket['default'])) }}"
 
 ...
