--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -23,17 +23,18 @@ platforms:
 
 provisioner:
   name: ansible
-  ansible_args:
-    - --diff
-    # - -vvv
+  # ansible_args:
+  #   - --diff
+  #   # - -vvv
   config_options:
     defaults:
       deprecation_warnings: True
       stdout_callback: yaml
+      callback_whitelist: profile_tasks
 
 scenario:
   test_sequence:
-    - lint
+    # - lint
     - destroy
     - dependency
     - syntax
