add mysqltuner again
remove old templates

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -20,7 +20,7 @@ mariadb_config_defaults_mysql:
   default-character-set: utf8mb4
 
 mariadb_config_defaults_mysqld:
-  #
+
   # * Basic Settings
   #
   user: mysql
@@ -36,6 +36,13 @@ mariadb_config_defaults_mysqld:
   # localhost which is more compatible and is not less secure.
   bind-address: 127.0.0.1
 
+  lower_case_table_names: "1"
+  # Possible values are ON, OFF, and DISABLED
+  event_scheduler: "ON"
+  # The number of seconds the server waits for activity on a connection before closing it
+  wait_timeout: 320
+
+
   # * Fine Tuning
   #
   #key_buffer_size: 16M
@@ -49,13 +56,21 @@ mariadb_config_defaults_mysqld:
   #table_cache: 64
   #thread_concurrency: 10
 
-  #
   # * Query Cache Configuration
   #
   #query_cache_limit: 1M
+  query_cache_type: "0"
+  query_cache_limit: 3M
   query_cache_size: 16M
+  # The largest size for temporary tables in memory
+  # https://mariadb.com/kb/en/library/server-system-variables/#tmp_table_size
+  tmp_table_size: "1024"
+  # Maximum size in bytes for user-created MEMORY tables
+  # https://mariadb.com/kb/en/library/server-system-variables/#max_heap_table_size
+  max_heap_table_size: 64M
+  # https://mariadb.com/kb/en/server-system-variables/#join_buffer_size
+  join_buffer_size: 262144
 
-  #
   # * Logging and Replication
   #
   # Both location gets rotated by the cronjob.
@@ -126,6 +141,22 @@ mariadb_config_defaults_mysqld:
   # InnoDB is enabled by default with a 10MB datafile in /var/lib/mysql/.
   # Read the manual for more InnoDB related options. There are many!
 
+  innodb_large_prefix: "1"
+
+  # The parameter innodb_file_format is deprecated and has no effect.
+  # It may be removed in future releases.
+  # See https://mariadb.com/kb/en/library/xtradbinnodb-file-format/
+  innodb_file_format: barracuda
+  innodb_file_per_table: "1"
+  # Set .._buffer_pool_size up to 80% of RAM but beware of setting too high.
+  innodb_buffer_pool_size: 256M
+  # Set .._log_file_size to 25% of buffer pool size.
+  innodb_log_file_size: 32M
+  innodb_log_buffer_size: 8M
+  innodb_flush_log_at_trx_commit: "1"
+  innodb_lock_wait_timeout: 50
+  innodb_data_file_path: ibdata1:10M:autoextend:max:128M
+
   #
   # * Unix socket authentication plugin is built-in since 10.0.22-6
   #
@@ -171,7 +202,7 @@ mariadb_config_defaults_custom:
   mariadb: {}
   mariadb-10.3:
     # mariadb > 10.1
-    log_bin_compress: 1
+    log_bin_compress: "1"
   client-mariadb: {}
   mysql_upgrade: {}
   mysqladmin: {}
