--- a/tasks/installation.yml
+++ b/tasks/installation.yml
@@ -76,4 +76,27 @@
   when:
     - mariadb_python_packages is defined
     - mariadb_python_packages | length > 0
+
+- name: install mysqltuner
+  get_url:
+    url: "https://raw.githubusercontent.com/major/MySQLTuner-perl/master/{{ item.name }}"
+    dest: /usr/local/bin/{{ item.name }}
+    mode: "{{ item.mode }}"
+  register: _download_mysqltuner
+  until: _download_mysqltuner is succeeded
+  retries: 5
+  delay: 2
+  check_mode: false
+  loop:
+    - name: mysqltuner.pl
+      mode: 0o750
+    - name: basic_passwords.txt
+      mode: 0o640
+    - name: vulnerabilities.csv
+      mode: 0o640
+  loop_control:
+    label: "{{ item.name }}"
+  when:
+    - mariadb_mysqltuner
+
 ...
