--- a/vars/main.yml
+++ b/vars/main.yml
@@ -213,7 +213,7 @@ mariadb_config_defaults_custom:
 
 mariadb_defaults_replication:
   enabled: false
-  role: '' # master or replica
+  role: '' # primary or replica
   primary: ''
   # Same keys as `mariadb_users` above.
   user:
