--- a/.github/workflows/primary-replica.yml
+++ b/.github/workflows/primary-replica.yml
@@ -1,5 +1,5 @@
 ---
-name: CI
+name: master-replica
 
 on:
   pull_request:
@@ -8,7 +8,7 @@ on:
       - master
       - development
   schedule:
-    - cron: "0 2 * * 0"
+    - cron: "0 3 * * 0"
 
 defaults:
   run:
