--- a/molecule/custom-datadir/group_vars/all/vars.yml
+++ b/molecule/custom-datadir/group_vars/all/vars.yml
@@ -1,10 +1,6 @@
 ---
 
-# mariadb_use_external_repo: false
-
-mariadb_bind_address: 127.0.0.1
-mariadb_root_password: root_password
-mariadb_max_connections: 20
+mariadb_root_password: Y5FZfKXzCeOWGf4kBOiFSp6Il
 
 mariadb_databases:
   - name: molecule
@@ -19,14 +15,15 @@ mariadb_users:
     encrypted: false
 
 mariadb_config_mysqld:
+  bind-address: 127.0.0.1
   socket: "{{ mariadb_socket }}"
   skip-external-locking:
-  # Skip reverse DNS lookup of clients
   skip-name-resolve: 1
-  # enable performance schema
   performance_schema: 1
+  expire_logs_days: 2
+  max_connections: 20
+
   datadir: /opt/mariadb/data
   tmpdir: /opt/mariadb/tmp
   log_error: /opt/mariadb/log/error.log
   slow_query_log_file: /opt/mariadb/log/mysql-slow.log
-  expire_logs_days: 2
