--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -18,6 +18,15 @@
       when:
         - ansible_os_family | lower in [ 'archlinux', 'debian' ]
 
+    - name: install netstat
+      package:
+        name:
+          - iproute
+        state: present
+      when:
+        - ansible_os_family | lower == 'redhat'
+        - ansible_distribution_major_version == 7
+
     - debug:
         msg:
           - "os family            : {{ ansible_os_family }}"
