--- a/molecule/with-replication/group_vars/all/vars.yml
+++ b/molecule/with-replication/group_vars/all/vars.yml
@@ -26,17 +26,17 @@ mariadb_config_mysqld:
   skip-name-resolve: 1
   # enable performance schema
   performance_schema: 1
-  datadir: /opt/mariadb/data
-  tmpdir: /opt/mariadb/tmp
-  log_error: /opt/mariadb/log/error.log
-  slow_query_log_file: /opt/mariadb/log/mysql-slow.log
+  # datadir: /opt/mariadb/data
+  # tmpdir: /opt/mariadb/tmp
+  # log_error: /opt/mariadb/log/error.log
+  # slow_query_log_file: /opt/mariadb/log/mysql-slow.log
+  # log_bin: /opt/mariadb/log/mysql-bin.log
   expire_logs_days: 2
   max_connections: 20
   # replication
   server-id: "{{ mariadb_server_id }}"
   relay_log: "{{ ansible_hostname }}-relay-bin"
   relay_log_index: "{{ ansible_hostname }}-relay-bin.index"
-  log_bin: /opt/mariadb/log/mysql-bin.log
   max_binlog_size: 100M
 
 # mariadb_replication_master: "master"
