--- a/.github/workflows/custom-datadir.yml
+++ b/.github/workflows/custom-datadir.yml
@@ -183,9 +183,9 @@ jobs:
 
       - name: test with tox
         run: |
-          tox -- molecule test --scenario-name custom-datadir
+          tox -e py$(printf "${{ matrix.python-version }}" | tr -d '.')-ansible$(printf "${{ matrix.ansible-version }}" | tr -d '.') \
+            -- molecule test --scenario-name custom-datadir
         env:
-          TOXENV: "py$(printf ${{ matrix.python-version }} | tr -d '.')-ansible$(printf ${{ matrix.ansible-version }} | tr -d '.')"
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
           DISTRIBUTION: ${{ matrix.image }}
